Added powershell compile for OpenJDK 11